feat: Complete Task 1 - Project Setup
- Initialize backend with Node.js/Express, ESLint, Prettier
- Initialize frontend with React/Vite, TailwindCSS, ESLint, Prettier
- Configure JWT authentication middleware
- Setup CORS and security (Helmet)
- Create project structure (layered architecture for backend, feature-based for frontend)
- Add environment variables configuration (.env.example)
- Update README with setup and run instructions
- Update .gitignore for proper env file handling

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@ build/
 
 # Environment and credentials
 .env
-.env.*
+.env.local
+.env.development
+.env.production
+!.env.example
 
 # Logs and debug
 npm-debug.log*
